...
    @PrimaryKey(autoGenerate = true)
    var id: Long = 0,
    @ColumnInfo(name = "phases_ended") val phasesEnded: Int = 0,
    @ColumnInfo(name = "skip_count") val skipCount: Int = 0,
    @ColumnInfo(name = "date") val date: Date = Date(),
    @ColumnInfo(name = "is_manual") val isManual: Boolean = false,
    @ColumnInfo(name = "name") val name: String = "HIIT",
    @ColumnInfo(name = "duration") val duration: Long = 0L,
    @ColumnInfo(name = "activity_type") val activityType: String = "HIIT",
    @ColumnInfo(name = "workout_id") val workoutId: Long? = null,
)

class SessionConverters {
...
